--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tktks",
+  "name": "shelf",
   "main": "./bin/www",
   "version": "0.0.0",
   "private": true,
@@ -15,5 +15,17 @@
     "http-errors": "~1.6.3",
     "mongoose": "~5.9.2",
     "morgan": "~1.9.1"
-  }
+  },
+  "description": "### Date: MM/DD/YYYY",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mlackey9601/shelf.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mlackey9601/shelf/issues"
+  },
+  "homepage": "https://github.com/mlackey9601/shelf#readme"
 }
