--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cookie-parser": "~1.4.4",
     "debug": "~4.1.1",
     "dotenv": "^8.2.0",
@@ -18,7 +19,8 @@
     "mongoose": "~5.9.2",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
-    "passport-google-oauth": "^2.0.0"
+    "passport-google-oauth": "^2.0.0",
+    "xml2js": "^0.4.23"
   },
   "description": "### Date: MM/DD/YYYY",
   "repository": {
