--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   "bugs": {
     "url": "https://github.com/mlackey9601/shelf/issues"
   },
-  "homepage": "https://github.com/mlackey9601/shelf#readme"
+  "homepage": "https://github.com/mlackey9601/shelf#readme",
+  "devDependencies": {
+    "mquery": "^3.2.3"
+  }
 }
