--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.12.7",
     "morgan": "~1.9.1",
+    "mpath": "^0.8.3",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "xml2js": "^0.4.23"
